# violetta

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  Makefile.linux.mk  Makefile.stm32.mk  Makefile_old.mk  README.md  compile_flags.txt
Generate/: CMakeLists.txt
Generate/Lazuli/: .mxproject  Lazuli2.ioc  Lazuli2.txt
Generate/Lazuli/Core/Inc/: i2c.h  main.h  spi.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h  tim.h
Generate/Lazuli/Core/Src/: adc.c  dma.c  gpio.c  i2c.c  main.c  spi.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c  tim.c  usart.c
Generate/Lazuli/Drivers/CMSIS/Device/ST/STM32L4xx/Include/: stm32l4p5xx.h
Generate/LazuliSensor/: .mxproject  CMakeLists.txt  Lazuli2Sensor.ioc  Lazuli2Sensor.txt  STM32C011F4Ux_FLASH.ld
Generate/LazuliSensor/Core/Inc/: main.h  spi.h  stm32c0xx_hal_conf.h  stm32c0xx_it.h  tim.h
Generate/LazuliSensor/Core/Src/: adc.c  dma.c  gpio.c  main.c  spi.c  stm32c0xx_hal_msp.c  stm32c0xx_it.c  tim.c
Generate/OldLazuli/: .mxproject  CMakeLists.txt  Lazuli.ioc  Lazuli.txt
Generate/OldLazuli/Core/Inc/: main.h  tim.h
Generate/OldLazuli/Core/Src/: adc.c  dma.c  gpio.c  i2c.c  main.c  spi.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c  tim.c  usart.c
Generate/zirconia2kai/: .mxproject  CMakeLists.txt  STM32F411CEUx_FLASH.ld  Zirconia2kai.ioc  Zirconia2kai.txt
Generate/zirconia2kai/Core/Inc/: main.h  spi.h  stm32f4xx_it.h  tim.h
Generate/zirconia2kai/Core/Src/: adc.c  dma.c  gpio.c  main.c  spi.c  stm32f4xx_it.c  tim.c  usart.c
Generate/zirconia2kai/Drivers/CMSIS/Device/ST/STM32F4xx/Include/: stm32f411xe.h
Platform/: CMakeLists.txt
Platform/Linux/: CMakeLists.txt  arm_math_linux.cpp  observer.cpp  tcp_client.cpp  udp_client.cpp
Platform/Linux/Inc/: arm_math_linux.h  observer.h  tcp_client.h  udp_client.h
Platform/STM32/: CMakeLists.txt  stm32l4xx_it.cpp
Platform/STM32/Inc/: myint.h
Platform/STM32C011xx/: CMakeLists.txt  STM32C011F4Ux_FLASH.ld  stm32c0xx_it.cpp  stm32c0xx_it.h
Platform/STM32F411xE/: CMakeLists.txt  STM32F411CEUx_FLASH.ld  stm32f4xx_it.cpp  stm32f4xx_it.h
Platform/STM32L4P5CETx/: CMakeLists.txt  STM32L4P5CETx_FLASH.ld  stm32l4xx_it.cpp  stm32l4xx_it.h
Project/: CMakeLists.txt
Project/reko/: CMakeLists.txt
Project/taniho/: CMakeLists.txt  taniho.cpp  taniho_linux.cpp  timer.cpp  timer_linux.cpp
Project/taniho/Inc/: params.h  taniho.h
Project/taniho/Src/: taniho.cpp  timer.cpp
Script/: githash.sh  switch-config.sh
Test/: CMakeLists.txt  test_mll_map_section.cpp  test_mll_maze_solver.cpp  test_mll_wall.cpp
Test/mpl/: test_led.cpp
Tool/: CMakeLists.txt
Tool/Githash/: CMakeLists.txt  Githash.cpp
Uml/: test.wsd
